--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "multer-firebase-storage": "^3.0.3",
         "mysql": "^2.18.1"
     },
     "devDependencies": {
