--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,8 @@
         "crypto-js": "^4.1.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "firebase": "^9.8.3",
+        "firebase-admin": "^10.3.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
